# vigil-cli

./: .gitignore  .vigil.example.yaml  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  SEGUIMIENTO-V0.md  SEGUIMIENTO-V1.md  pyproject.toml
data/: placeholder_patterns.json  popular_npm.json  popular_pypi.json
docs/: README.md  analizadores.md  arquitectura.md  buenas-practicas.md  ci-cd.md  cli.md  compliance.md  configuracion.md  contribuir.md  docker.md  faq.md  formatos-salida.md  inicio-rapido.md  reglas.md  seguridad.md
docs/github-notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v1.0.0.md
planes/: SEGUIMIENTO-V0.md
scripts/: fetch_popular_packages.py
src/vigil/: __init__.py  __main__.py  cli.py
src/vigil/analyzers/: base.py
src/vigil/config/: loader.py  rules.py  schema.py
src/vigil/core/: engine.py  file_collector.py  finding.py  rule_registry.py
tests/: conftest.py  test_changed_only.py  test_cli.py  test_cli_edge_cases.py  test_fase5_qa.py  test_fase6_data_polish.py  test_fase6_qa.py  test_integration.py  test_integration_e2e.py  test_logging.py  test_main_module.py
tests/test_config/: test_loader.py  test_loader_edge_cases.py  test_rules.py  test_rules_edge_cases.py  test_schema.py  test_schema_edge_cases.py
tests/test_core/: test_engine.py  test_engine_edge_cases.py  test_file_collector.py  test_file_collector_edge_cases.py  test_finding.py  test_finding_edge_cases.py
tests/test_reports/: test_fase4_formatters.py  test_fase4_qa.py  test_formatters.py  test_formatters_edge_cases.py
(+74 files in other folders)
